<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.AddPostActivity">

    <TextView
        android:id="@+id/aggiungiPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="Times New Roman"
        android:text="@string/aggiungi_nuovo_post"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/delay_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/border_blue"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/aggiungiPost"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <TextView
            android:id="@+id/delay_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ritardo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/inOrario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDelayRadioButtonClicked"
            android:text="@string/in_orario"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/pochiMinuti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDelayRadioButtonClicked"
            android:text="@string/ritardo_di_pochi_minuti"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/totMinuti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDelayRadioButtonClicked"
            android:text="@string/ritardo_oltre_i_15_minuti"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/soppressi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDelayRadioButtonClicked"
            android:text="@string/treni_soppressi"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/status_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/delay_buttons"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:background="@drawable/border_blue"
        android:paddingStart="8dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stato_del_viaggio"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/ideale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/situazione_ideale"
            android:textSize="16sp"
            android:onClick="onStatusRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/accettabile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accettabile"
            android:textSize="16sp"
            android:onClick="onStatusRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/graviProblemi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gravi_problemi_per_i_passeggeri"
            android:textSize="16sp"
            android:onClick="onStatusRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_blue"
        android:ems="10"
        android:hint="@string/inserisci_commento"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_buttons"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indietro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aggiungi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>